<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
	android:layout_marginLeft="2dp"
	android:layout_marginRight="2dp"

    >

    <com.ou.view.ShortCutView
        android:id="@+id/shortCutView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
 />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/buttonShortCutOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/shortcut_m"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonShortCutLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonShortCutOk"
            android:layout_alignBottom="@+id/buttonShortCutOk"
            android:layout_toLeftOf="@+id/buttonShortCutOk"
            android:text="@string/shortcut_left" />

        <Button
            android:id="@+id/buttonShortCutUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonShortCutOk"
            android:layout_toRightOf="@+id/buttonShortCutLeft"
            android:text="@string/shortcut_up" />

        <Button
            android:id="@+id/buttonShortCutDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonShortCutOk"
            android:layout_below="@+id/buttonShortCutOk"
            android:text="@string/shortcut_down" />

        <Button
            android:id="@+id/buttonShortCutRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                     android:layout_alignBaseline="@+id/buttonShortCutOk"
            android:layout_alignBottom="@+id/buttonShortCutOk"
            android:layout_toRightOf="@+id/buttonShortCutOk"

            android:text="@string/shortcut_right" />

    </RelativeLayout>

</FrameLayout>