<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ou.ui.DemoActivity" 
    android:orientation="vertical"
    >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:visibility="gone"
            >

            <Button
                android:id="@+id/buttonOpen"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonClose"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                  android:layout_weight="1"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_id"/>

            <Button
                android:id="@+id/buttonSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_setting"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonKeyset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="快捷键" />

            <Button
                android:id="@+id/buttonHardwareTest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_hardware"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonCal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_checksum"/>

            <Button
                android:id="@+id/buttonUpgrde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_upgrade"/>

           </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
 
        android:layout_marginTop="26dp"
        />

</LinearLayout>
